--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "astro build && gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/react": "^4.2.7",
@@ -18,6 +19,7 @@
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
-    "@types/react": "^19.1.3"
+    "@types/react": "^19.1.3",
+    "gh-pages": "^6.3.0"
   }
 }
